# libhevctest

./: CMakeLists.txt  README.md
decoder/: CMakeLists.txt
test/: CMakeLists.txt
test/decoder/: main.c
